Fix for dark modes and themes.
See https://github.com/OpenDyslexic/opendyslexic-chrome/issues/21 comment here.

--- a/app/styles/sass/accesibility.sass
+++ b/app/styles/sass/accesibility.sass
@@ -38,7 +38,6 @@
   --opendyslexic-chrome-mono: opendyslexicmono, Elusive-Icons, FontAwesome, 'Glyphicons Halflings', monospace
 
 html
-  color: rgb(25, 26, 66)
   font-family: var(--opendyslexic-chrome-sans)
 
 p:nth-child(even), li:nth-child(even)
@@ -61,8 +60,6 @@ pre, code
 .ace_text-input, .prettyprint
   font-family: var(--opendyslexic-chrome-mono) !important
 
-.original-tweet
-  background-color: #fff !important
 
 input, textarea
   font-family: var(--opendyslexic-chrome-sans) !important
